# django-react

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.org  README.rst  setup.cfg
demo/: README.md
demo/backend/: package-lock.json  package.json  vite.config.js
demo/backend/backend/: settings.py  urls.py
demo/backend/todo/: urls.py  views.py
demo/backend/todo/components/: todo.jsx
react/: README.md  apps.py  generic.py  mixins.py
react/components/: app.jsx
react/templates/react/: react.html  react_props.html
react/templatetags/: react_tags.py
